--- a/es/Dockerfile
+++ b/es/Dockerfile
@@ -1,7 +1,7 @@
 FROM elasticsearch:5.1
 
 # x-pack をインストール
-#RUN elasticsearch-plugin  install --batch x-pack
+RUN elasticsearch-plugin  install --batch x-pack
 
 # kuromojiをインストール
-#RUN elasticsearch-plugin  install analysis-kuromoji
+RUN elasticsearch-plugin  install analysis-kuromoji
